--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@blackdogz/schedulesearch",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "ischeduleSearch.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test"
   },
   "author": "",
   "license": "ISC"
